--- a/biome.json
+++ b/biome.json
@@ -27,6 +27,7 @@
   "vcs": {
     "enabled": true,
     "clientKind": "git",
-    "useIgnoreFile": true
+    "useIgnoreFile": true,
+    "defaultBranch": "master"
   }
 }
