build: add commitlint conventional
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,5 @@
     "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
-  "cSpell.words": ["mitata", "quantile", "runtimes"]
+  "cSpell.words": ["commitlint", "mitata", "quantile", "runtimes"]
 }
