--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.6.4",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "@types/bun": "^1.0.12",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
