build: add files field to package.json
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "type": "git",
     "url": "git+https://github.com/evanwashere/mitata.git"
   },
+  "files": ["src"],
   "scripts": {
     "prepare": "bun run prepare.mjs",
     "format": "biome format . --write",
