--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -53,13 +53,13 @@ jobs:
           node-version: '20.x'
           registry-url: https://registry.npmjs.org/
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: 1.x
+      # - name: Setup Bun
+      #   uses: oven-sh/setup-bun@v1
+      #   with:
+      #     bun-version: 1.x
 
-      - name: Install Dependencies
-        run: bun install --ignore-scripts --frozen-lockfile
+      # - name: Install Dependencies
+      #   run: bun install --ignore-scripts --frozen-lockfile
 
       - name: Read package.json version
         id: package-version
