--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "tatami",
   "type": "module",
   "license": "MIT",
-  "version": "0.1.11",
+  "version": "0.2.0-0",
   "packageManager": "bun@1.1.2",
   "types": "./src/cli.d.ts",
   "main": "./src/cli.mjs",
