refactor: rename to tatami-ng to avoid name collision on npm.js
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,5 @@
     "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
-  "cSpell.words": ["commitlint", "tatami", "quantile", "runtimes"]
+  "cSpell.words": ["commitlint", "tatami-ng", "quantile", "runtimes"]
 }
