feat: add `time` to run() options
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,12 @@
     "source.organizeImports.biome": "explicit"
   },
   "cSpell.words": [
-    "Benoit",
+    "benoit",
     "cheatsheet",
     "commitlint",
-    "POOLIFIER",
+    "deno",
+    "hrtime",
+    "poolifier",
     "quantile",
     "runtimes",
     "tatami-ng"
