docs: refine README.md
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,8 +17,10 @@
     "commitlint",
     "deno",
     "hrtime",
+    "mitata",
     "poolifier",
     "quantile",
+    "quantiles",
     "rmoe",
     "runtimes",
     "tatami-ng"
