--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -39,6 +39,31 @@ jobs:
           bun test:deno
           bun test:bun
 
+  publish-jsr:
+    needs: build
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
+      - name: Read package.json version
+        id: package-version
+        uses: jaywcjlove/github-action-package@main
+
+      - name: Publish Release
+        if: ${{ contains(steps.package-version.outputs.version, '-') == false }}
+        run: npx jsr publish --allow-dirty
+
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
