--- a/.release-it.json
+++ b/.release-it.json
@@ -15,7 +15,7 @@
   },
   "plugins": {
     "@release-it/bumper": {
-      "out": ["README.md"]
+      "out": ["jsr.json", "README.md"]
     },
     "@release-it/keep-a-changelog": {
       "filename": "CHANGELOG.md",
