--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -56,6 +56,11 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: 1.x
+
       - name: Read package.json version
         id: package-version
         uses: jaywcjlove/github-action-package@main
