docs: add some keywords
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "description": "cross javascript runtime benchmarking library",
   "homepage": "https://github.com/poolifier/tatami-ng#readme",
+  "keywords": ["benchmark", "browser", "bun", "deno", "node"],
   "bugs": {
     "url": "https://github.com/poolifier/tatami-ng/issues"
   },
