--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "license": "MIT",
   "version": "0.3.4",
   "packageManager": "bun@1.1.3",
-  "types": "./src/cli.d.ts",
-  "main": "./src/cli.mjs",
-  "browser": "./src/cli.mjs",
+  "types": "./src/index.d.ts",
+  "main": "./src/index.mjs",
+  "browser": "./src/index.mjs",
   "exports": {
-    "types": "./src/cli.d.ts",
-    "import": "./src/cli.mjs",
-    "browser": "./src/cli.cjs"
+    "types": "./src/index.d.ts",
+    "import": "./src/index.mjs",
+    "browser": "./src/index.mjs"
   },
   "description": "cross javascript runtime benchmarking library",
   "homepage": "https://github.com/poolifier/tatami-ng#readme",
