--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
         run: bun install --ignore-scripts --frozen-lockfile
       - name: Run Code Quality Checks
         run: bun check:ci
+      - name: Bundle
+        run: bun bundle
       - name: Run Tests
         run: |
           bun test:node
