--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "packageManager": "bun@1.1.3",
   "types": "./src/index.d.ts",
   "main": "./src/index.mjs",
-  "browser": "./src/index.mjs",
+  "browser": "./dist/browser/index.js",
   "exports": {
     "types": "./src/index.d.ts",
     "import": "./src/index.mjs",
-    "browser": "./src/index.mjs"
+    "browser": "./dist/browser/index.js"
   },
   "description": "cross javascript runtime benchmarking library",
   "homepage": "https://github.com/poolifier/tatami-ng#readme",
@@ -23,15 +23,16 @@
     "type": "git",
     "url": "git+https://github.com/poolifier/tatami-ng.git"
   },
-  "files": ["src"],
+  "files": ["src", "dist"],
   "scripts": {
-    "prepare": "bun run prepare.mjs",
+    "prepare": "bun run prepare.ts",
     "format": "biome format . --write",
     "lint": "biome lint .",
     "lint:apply": "biome lint . --apply",
     "check": "biome check .",
     "check:apply": "biome check . --apply",
     "check:ci": "biome ci .",
+    "bundle": "bun run bundle.ts",
     "test:node": "node tests/test.js",
     "test:deno": "deno run -A tests/test.js && deno run -A tests/test.ts",
     "test:bun": "bun run tests/test.js && bun run tests/test.ts",
