build: ensure browser bundling against latest bun version
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,12 +13,15 @@
   "cSpell.words": [
     "benoit",
     "biomejs",
+    "bunx",
     "cheatsheet",
     "commitlint",
     "deno",
     "hrtime",
+    "lukeed",
     "mitata",
     "npmjs",
+    "outdir",
     "poolifier",
     "quantile",
     "quantiles",
