--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: 1.x
+          no-cache: true
       - name: Install Dependencies
         run: bun install --ignore-scripts --frozen-lockfile
       - name: Run Code Quality Checks
