--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: 20.x
 
       - name: Setup Deno
         uses: denoland/setup-deno@v1
@@ -26,6 +26,7 @@ jobs:
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: 1.x
+          no-cache: true
 
       - name: Install Dependencies
         run: bun install --ignore-scripts --frozen-lockfile
@@ -57,12 +58,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: 20.x
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: 1.x
+          no-cache: true
 
       - name: Read package.json version
         id: package-version
@@ -83,13 +85,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: 20.x
           registry-url: https://registry.npmjs.org/
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: 1.x
+          no-cache: true
 
       - name: Bundle
         run: bun bundle
