--- a/biome.json
+++ b/biome.json
@@ -16,6 +16,8 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "single",
+      "trailingCommas": "es5",
+      "semicolons": "asNeeded",
       "arrowParentheses": "asNeeded"
     }
   },
