--- a/.github/release-please/config.json
+++ b/.github/release-please/config.json
@@ -4,6 +4,7 @@
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
   "include-component-in-tag": false,
+  "include-v-in-tag": false,
   "packages": {
     ".": {
       "extra-files": [
