chore(master): release 0.4.16

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "tatami-ng",
   "type": "module",
   "license": "MIT",
-  "version": "0.4.15",
+  "version": "0.4.16",
   "packageManager": "bun@1.1.18",
   "types": "./src/index.d.ts",
   "main": "./src/index.js",
@@ -15,7 +15,13 @@
   },
   "description": "cross javascript runtime benchmarking library",
   "homepage": "https://github.com/poolifier/tatami-ng#readme",
-  "keywords": ["benchmark", "browser", "bun", "deno", "node"],
+  "keywords": [
+    "benchmark",
+    "browser",
+    "bun",
+    "deno",
+    "node"
+  ],
   "bugs": {
     "url": "https://github.com/poolifier/tatami-ng/issues"
   },
@@ -23,7 +29,10 @@
     "type": "git",
     "url": "git+https://github.com/poolifier/tatami-ng.git"
   },
-  "files": ["src", "dist"],
+  "files": [
+    "src",
+    "dist"
+  ],
   "scripts": {
     "prepare": "bun run prepare.ts",
     "format": "biome format . --write",
