--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "version": "0.4.16",
   "packageManager": "bun@1.1.18",
+  "bin": {
+    "tatami": "cli.mjs"
+  },
   "types": "./src/index.d.ts",
   "main": "./src/index.js",
   "browser": "./dist/browser/index.js",
@@ -36,6 +39,9 @@
     "test:node": "node tests/test.js",
     "test:deno": "deno run -A tests/test.js && deno run -A tests/test.ts",
     "test:bun": "bun run tests/test.js && bun run tests/test.ts"
+  },
+  "dependencies": {
+    "peowly": "^1.3.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
