--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "bundle": "bun bundle.ts",
     "test:node": "node tests/test.js",
     "test:deno": "deno run -A tests/test.js && deno run -A tests/test.ts",
-    "test:bun": "bun tests/test.js && bun tests/test.ts"
+    "test:bun": "bun tests/test.js && bun tests/test.ts",
+    "cli:node": "rm -f tatami tatami.blob && node --experimental-sea-config sea-config.json && cp $(command -v node) tatami && chmod +w tatami && npx postject tatami NODE_SEA_BLOB tatami.blob --sentinel-fuse NODE_SEA_FUSE_fce680ab2cc467b6e072b8b5df1996b2",
+    "cli:deno": "rm -f tatami && deno compile --allow-read --allow-run --allow-sys --allow-hrtime --output=tatami ./cli.js"
   },
   "dependencies": {
     "peowly": "^1.3.2"
