refactor: npx -> bunx where appropriates
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -95,7 +95,7 @@ jobs:
 
       - name: Publish Release
         if: ${{ contains(steps.package-version.outputs.version, '-') == false }}
-        run: npx jsr publish --allow-dirty
+        run: bunx jsr publish --allow-dirty
 
   publish-npm:
     needs: build-release
