--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,5 +1,9 @@
 {
-  "language_servers": ["biome"],
+  "language_servers": [
+    "biome",
+    "typescript-language-server",
+    "json-language-server"
+  ],
   "code_actions_on_format": {
     "source.fixAll.biome": true,
     "source.organizeImports.biome": true
