chore: refine prettier configuration
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
   "arrowParens": "avoid",
-  "singleQuote": true
+  "singleQuote": true,
+  "semi": false,
+  "trailingComma": "es5"
 }
