--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,5 +1,5 @@
 {
-  "language_servers": ["biome", "json-language-server"],
+  "language_servers": ["biome", "vtsls", "json-language-server"],
   "code_actions_on_format": {
     "source.fixAll.biome": true,
     "source.organizeImports.biome": true
