--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "license": "MIT",
   "version": "0.5.5",
-  "packageManager": "bun@1.1.21",
+  "packageManager": "bun@1.1.22",
   "bin": {
     "tatami": "cli.js"
   },
@@ -40,7 +40,8 @@
     "test:deno": "deno run -A tests/test.js && deno run -A tests/test.ts",
     "test:bun": "bun tests/test.js && bun tests/test.ts",
     "cli:node": "rm -f tatami tatami.blob && node --experimental-sea-config sea-config.json && cp $(volta which node || n which lts || nvm which node || command -v node) tatami && npx postject tatami NODE_SEA_BLOB tatami.blob --sentinel-fuse NODE_SEA_FUSE_fce680ab2cc467b6e072b8b5df1996b2",
-    "cli:deno": "rm -f tatami && deno compile --allow-read --allow-run --allow-sys --allow-hrtime --output=tatami ./cli.js"
+    "cli:deno": "rm -f tatami && deno compile --allow-read --allow-run --allow-sys --allow-hrtime --output=tatami ./cli.js",
+    "cli:bun": "rm -f tatami && bun build --compile --minify --sourcemap ./cli.js --outfile tatami"
   },
   "dependencies": {
     "peowly": "^1.3.2"
