refactor: cleanup test and cli building scripts usage
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,4 @@ jobs:
       - name: Bundle
         run: bun bundle
       - name: Run Tests
-        run: |
-          bun test:node
-          bun test:deno
-          bun test:bun
+        run: bun run test
