--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "check:write": "biome check . --write",
     "check:ci": "biome ci .",
     "bundle": "bun bundle.ts",
+    "test": "run-s test:*",
     "test:node": "node tests/test.js",
     "test:deno": "deno run --allow-sys --allow-hrtime tests/test.js && deno run --allow-sys --allow-hrtime tests/test.ts",
     "test:bun": "bun tests/test.js && bun tests/test.ts",
-    "cli:node": "npx rimraf tatami && node --experimental-sea-config sea-config.json && npx ncp $(volta which node || n which lts || nvm which node || command -v node) tatami && npx postject tatami NODE_SEA_BLOB tatami.blob --sentinel-fuse NODE_SEA_FUSE_fce680ab2cc467b6e072b8b5df1996b2 && npx rimraf tatami.blob",
-    "cli:deno": "deno run --allow-env --allow-read --allow-write npm:rimraf tatami && deno compile --allow-read --allow-run --allow-sys --allow-hrtime --output=tatami ./cli.js",
-    "cli:bun": "bunx rimraf tatami && bun build --compile --minify --sourcemap ./cli.js --outfile tatami"
+    "build:cli": "run-p build:*",
+    "build:cli:node": "npx --yes rimraf ./dist/node/tatami && npx --yes mkdirp ./dist/node && node --experimental-sea-config sea-config.json && npx --yes ncp $(volta which node || n which lts || nvm which node || command -v node) ./dist/node/tatami && npx --yes postject ./dist/node/tatami NODE_SEA_BLOB ./dist/node/tatami.blob --sentinel-fuse NODE_SEA_FUSE_fce680ab2cc467b6e072b8b5df1996b2 && npx --yes rimraf ./dist/node/tatami.blob",
+    "build:cli:deno": "deno run --allow-env --allow-read --allow-write npm:rimraf tatami && deno compile --allow-read --allow-run --allow-sys --allow-hrtime --output=./dist/deno/tatami ./cli.js",
+    "build:cli:bun": "bunx rimraf ./dist/bun/tatami && bun build --compile --minify --sourcemap ./cli.js --outfile ./dist/bun/tatami"
   },
   "dependencies": {
     "peowly": "^1.3.2"
@@ -53,6 +55,7 @@
     "@types/bun": "^1.1.8",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.10",
+    "npm-run-all2": "^6.2.2",
     "prettier": "^3.3.3"
   },
   "peerDependencies": {
