--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.1/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.2/schema.json",
   "organizeImports": {
     "enabled": true
   },
@@ -10,6 +10,7 @@
     }
   },
   "formatter": {
+    "useEditorconfig": true,
     "indentStyle": "space",
     "indentWidth": 2
   },
