--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,11 @@
   "extends": ["config:recommended", "group:allNonMajor", "schedule:daily"],
   "lockFileMaintenance": {
     "enabled": true
-  }
+  },
+  "packageRules": [
+    {
+      "matchFileNames": ["**/package.json"],
+      "rangeStrategy": "bump"
+    }
+  ]
 }
