chore: refine renovate configuration
Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,11 @@
   "packageRules": [
     {
       "matchFileNames": ["**/package.json"],
+      "matchDepTypes": [
+        "dependencies",
+        "devDependencies",
+        "optionalDependencies"
+      ],
       "rangeStrategy": "bump"
     }
   ]
