--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "build:cli:bun": "bunx rimraf ./dist/bun/tatami && bun build --compile --minify --sourcemap ./cli.js --outfile ./dist/bun/tatami"
   },
   "dependencies": {
+    "@tsconfig/bun": "^1.0.10",
     "peowly": "^1.3.2"
   },
   "devDependencies": {
